@@ -1,3 +1,9 @@
+2007-05-28  Jens Granseuer  <jensgr@gmx.net>
+
+	* configure.in:
+	* capplets/Makefile.am: remove fonts, theme, and ui capplets from the build
+	and purge some obsolete stuff from configure.in
+
 2007-05-19  Sergey Udaltsov <svu@gnome.org>
 
 	* configure.in: dependency on libxklavier reverted to 3.2
